--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.4"
 
 services:
   app:
-    image: docker.z-dn.net/golang-1.11-alpine
+    image: golang:1.11-stretch
     working_dir: /github.com/gmiejski/dvd-rental-tdd-example
     volumes:
       - .:/github.com/gmiejski/dvd-rental-tdd-example
@@ -18,7 +18,7 @@ services:
     links:
       - database
       - mongodb
-    command: ["wait-for-ports", "go", "run", "main.go"]
+    command: ["go", "run", "main.go"]
 
   database:
     image: "postgres:9.6-alpine"
@@ -28,14 +28,6 @@ services:
     - POSTGRES_DB=dvd-rental-tdd-example
     ports:
     - "5432:5432"
-
-  rabbitmq:
-    image: rabbitmq:3-management
-    logging:
-      driver: none
-    ports:
-      - "15672:15672"
-      - "5672:5672"
 
   mongodb:
     image: mongo:latest
