fix mongo tests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
     - ./data/db:/data/db
     ports:
     - 27017:27017
-    command: mongod --smallfiles --logpath=/dev/null # --quiet
+    command: mongod --logpath=/dev/null # --quiet
 
   migration:
     image: "brainly/mattes-migrate:3.0.1"
